# Bustelo

./: .clangd  .gitignore  CMakeLists.txt  Makefile  readme.md
src/: cli.c  cli.h  gui.c  gui.h  list.c  logger.c  logger.h  main.c  molido.c  molido.h
